--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h2 {
 }
 
 div p{
-    color: wh;
+    color: white;
     font-weight: bold;
 }
 
@@ -62,6 +62,8 @@ p {
 
 .hearts {
     margin-top: 20px;
+    color: white;
+    font-weight: bold;
 }
 
 .hearts span {
